# rin

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  LICENSE  Makefile  README.en.md  README.md  ROADMAP.en.md  ROADMAP.md  SECURITY.en.md  SECURITY.md  go.mod
api/: contract.go  contract_test.go  openapi.json  required.go
compat/: adapter_examples_test.go  ai_galgame_test.go  documentation_test.go  release_e2e_test.go  sdk_kits_test.go
docs/: README.md  README.zh-CN.md  architecture.md  architecture.zh-CN.md  compatibility.md  compatibility.zh-CN.md  game-adapters.md  game-adapters.zh-CN.md  living-worlds-v0.5-plan.md  living-worlds-v0.5-plan.zh-CN.md  migration-v0.6.md  migration-v0.6.zh-CN.md  model-policy.md  model-policy.zh-CN.md  outcome-reporting.md  outcome-reporting.zh-CN.md  protocol-v1.md  protocol-v1.zh-CN.md  release-guide.md  release-guide.zh-CN.md  rpg-events.md  rpg-events.zh-CN.md  sdk-and-mods.md  sdk-and-mods.zh-CN.md  writing-guide.md  writing-guide.zh-CN.md
generation/: manager.go  manager_test.go
httpapi/: contract_test.go  contract_validation.go  routes_gen.go  server.go  server_test.go  status_test.go
jobs/: error_detail_test.go  manager.go  manager_test.go
policy/: cache.go  cache_test.go  deterministic.go  deterministic_test.go  failover.go  model.go  model_test.go
protocol/: contract_gen.go  debug.go  debug_validate.go  error_detail.go  features.go  (+15 more)
sdk/python/: README.md  README.zh-CN.md  pyproject.toml
sdk/python/examples/: quickstart.py
sdk/python/src/rin_sdk/: __init__.py  client.py
sdk/python/tests/: test_client.py
(+115 files in other folders)
