[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rin-game-sdk"
version = "0.6.0"
description = "Dependency-free Python client for the Rin agent runtime"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
